1.0 beta 1
-----------
* Compile LSP into Java bytecode for better performance.
* LSP Extension functions implemented as Java methods.


1.0 beta 2
----------
* Strip whitespace in LSP.
* Search for <import>ed files in multiple directories.


1.0 beta 3
----------
* Strip more whitespace in LSP.
* More efficient compilation of large LSP pages.


1.0 beta 4
----------
* Support for Jakarta Struts.
* Show line number in LSP source in stack trace.
* Check version of compiled code against runtime.


1.0 beta 5
----------
* Check for circular import.
* Add JSR-45 (Debugging Support for Other Languages) information 
  to generated class files.
* Split lsp.jar into lsprt.jar and lspc.jar.


1.0 final
---------
* disable-output-escaping in <lsp:value-of>
* Removed <lsp:include>. This was almost never used, and you can get the
  same functionallity using an Extension Library.
* Use JFlex for parsing LSP expressions, full support for Unicode in 
  identifiers (according to XPath 1.0).


1.0.1
-----
* Move to separate project and change packaging a bit.
* xmlutil.jar is no longer needed.


1.1
---
* <lsp:output>.
* Allow <lsp:attribute> inside <lsp:if>
* Whitespace stripping after <lsp:attribute>.
* Smart handling of boolean attributes.


1.2
---
* Transform LSP output with XSLT stylesheet.
* Improved documentation.


1.2.1
-----
* Can be compiled and used with both Java 1.4 and 
  Java 1.5 (also known as 5.0).
* Small change in Servlet code to allow for future enhancements.


1.3
---
* Servlet extension library with internationalization support.
* New formatting code for XML, HTML, XHTML and Text. 
  UTF-8 encoding is now default for XHTML.
* Rudimentary Struts integration.


next
----
* Any java.util.Collection can be used as the list type, 
  not only java.util.List.
